website/websites/u32/code/meteor.1.scala.log

Tue, 19 May 2015 03:26:16 GMT

MAKE:
mv meteor.scala meteor.scala
mv: ‘meteor.scala’ and ‘meteor.scala’ are the same file
/home/dunham/benchmarksgame/nanobench/makefiles/u32.programs.Makefile:598: recipe for target 'meteor.scala_run' failed
make: [meteor.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.11.6/bin/scalac -optimise -target:jvm-1.8 meteor.scala
Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
meteor.scala:296: error: value first is not a member of Array[String]
          args.first.toInt
               ^
one error found
/home/dunham/benchmarksgame/nanobench/makefiles/u32.programs.Makefile:598: recipe for target 'meteor.scala_run' failed
make: [meteor.scala_run] Error 1 (ignored)
3.57s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.8.0_45/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.11.6/lib/scala-library.jar:/usr/local/src/scala-2.11.6/lib/akka-actors.jar:/usr/local/src/scala-2.11.6/lib/typesafe-config.jar meteor 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
Error: Could not find or load main class meteor
